tests/compile-fail/derive_stack_location_wrong_type.stderr
error: #[stack(location)] field must be of type `suzunari_error::Location`
 --> tests/compile-fail/derive_stack_location_wrong_type.rs:9:11
  |
9 |     name: String,
  |           ^^^^^^

error[E0277]: the trait bound `String: GenerateImplicitData` is not satisfied
 --> tests/compile-fail/derive_stack_location_wrong_type.rs:4:17
  |
4 | #[derive(Debug, snafu::Snafu, StackError)]
  |                 ^^^^^^^^^^^^ the trait `GenerateImplicitData` is not implemented for `String`
  |
  = help: the following other types implement trait `GenerateImplicitData`:
            Arc<T>
            Backtrace
            Box<T>
            Option<Backtrace>
            Rc<T>
            snafu::Location
            suzunari_error::Location
  = note: this error originates in the derive macro `snafu::Snafu` (in Nightly builds, run with -Z macro-backtrace for more info)
